--- a/index.html
+++ b/index.html
@@ -212,51 +212,25 @@
 		<input id="item13-13" class="crossword-board__item" type="text" minlength="1" maxlength="1" pattern="^[eE]{1}$" required="required" value="" />
 
 		<div class="crossword-board crossword-board--highlight crossword-board--highlight--across">
-			<span id="across-1" class="crossword-board__item-highlight crossword-board__item-highlight--across-1"></span>
-			<span id="across-7" class="crossword-board__item-highlight crossword-board__item-highlight--across-7"></span>
-			<span id="across-8" class="crossword-board__item-highlight crossword-board__item-highlight--across-8"></span>
+			<span id="across-2" class="crossword-board__item-highlight crossword-board__item-highlight--across-2"></span>
+			<span id="across-4" class="crossword-board__item-highlight crossword-board__item-highlight--across-4"></span>
+			<span id="across-6" class="crossword-board__item-highlight crossword-board__item-highlight--across-6"></span>
+			<span id="across-9" class="crossword-board__item-highlight crossword-board__item-highlight--across-9"></span>
 			<span id="across-10" class="crossword-board__item-highlight crossword-board__item-highlight--across-10"></span>
-			<span id="across-11" class="crossword-board__item-highlight crossword-board__item-highlight--across-11"></span>
-			<span id="across-14" class="crossword-board__item-highlight crossword-board__item-highlight--across-14"></span>
-			<span id="across-16" class="crossword-board__item-highlight crossword-board__item-highlight--across-16"></span>
-			<span id="across-17" class="crossword-board__item-highlight crossword-board__item-highlight--across-17"></span>
-			<span id="across-19" class="crossword-board__item-highlight crossword-board__item-highlight--across-19"></span>
-			<span id="across-21" class="crossword-board__item-highlight crossword-board__item-highlight--across-21"></span>
-			<span id="across-22" class="crossword-board__item-highlight crossword-board__item-highlight--across-22"></span>
-			<span id="across-23" class="crossword-board__item-highlight crossword-board__item-highlight--across-23"></span>
-			<span id="across-26" class="crossword-board__item-highlight crossword-board__item-highlight--across-26"></span>
-			<span id="across-28" class="crossword-board__item-highlight crossword-board__item-highlight--across-28"></span>
-			<span id="across-29" class="crossword-board__item-highlight crossword-board__item-highlight--across-29"></span>
-			<span id="across-30" class="crossword-board__item-highlight crossword-board__item-highlight--across-30"></span>
-			<span id="across-31" class="crossword-board__item-highlight crossword-board__item-highlight--across-31"></span>
-			<span id="across-32" class="crossword-board__item-highlight crossword-board__item-highlight--across-32"></span>
-			<span id="across-33" class="crossword-board__item-highlight crossword-board__item-highlight--across-33"></span>
+			<span id="across-12" class="crossword-board__item-highlight crossword-board__item-highlight--across-12"></span>
+			<span id="across-13" class="crossword-board__item-highlight crossword-board__item-highlight--across-13"></span>
 		</div>
 
 		<div class="crossword-board crossword-board--highlight crossword-board--highlight-down">
 			<span id="down-1" class="crossword-board__item-highlight crossword-board__item-highlight--down-1"></span>
-			<span id="down-2" class="crossword-board__item-highlight crossword-board__item-highlight--down-2"></span>
 			<span id="down-3" class="crossword-board__item-highlight crossword-board__item-highlight--down-3"></span>
 			<span id="down-4" class="crossword-board__item-highlight crossword-board__item-highlight--down-4"></span>
 			<span id="down-5" class="crossword-board__item-highlight crossword-board__item-highlight--down-5"></span>
-			<span id="down-6" class="crossword-board__item-highlight crossword-board__item-highlight--down-6"></span>
+			<span id="down-7" class="crossword-board__item-highlight crossword-board__item-highlight--down-7"></span>
 			<span id="down-8" class="crossword-board__item-highlight crossword-board__item-highlight--down-8"></span>
 			<span id="down-9" class="crossword-board__item-highlight crossword-board__item-highlight--down-9"></span>
-			<span id="down-12" class="crossword-board__item-highlight crossword-board__item-highlight--down-12"></span>
-			<span id="down-13" class="crossword-board__item-highlight crossword-board__item-highlight--down-13"></span>
-			<span id="down-15" class="crossword-board__item-highlight crossword-board__item-highlight--down-15"></span>
-			<span id="down-18" class="crossword-board__item-highlight crossword-board__item-highlight--down-18"></span>
-			<span id="down-19" class="crossword-board__item-highlight crossword-board__item-highlight--down-19"></span>
-			<span id="down-20" class="crossword-board__item-highlight crossword-board__item-highlight--down-20"></span>
-			<span id="down-21" class="crossword-board__item-highlight crossword-board__item-highlight--down-21"></span>
-			<span id="down-22" class="crossword-board__item-highlight crossword-board__item-highlight--down-22"></span>
-			<span id="down-23" class="crossword-board__item-highlight crossword-board__item-highlight--down-23"></span>
-			<span id="down-24" class="crossword-board__item-highlight crossword-board__item-highlight--down-24"></span>
-			<span id="down-25" class="crossword-board__item-highlight crossword-board__item-highlight--down-25"></span>
-			<span id="down-26" class="crossword-board__item-highlight crossword-board__item-highlight--down-26"></span>
-			<span id="down-27" class="crossword-board__item-highlight crossword-board__item-highlight--down-27"></span>
-			<span id="down-28" class="crossword-board__item-highlight crossword-board__item-highlight--down-28"></span>
-			<span id="down-30" class="crossword-board__item-highlight crossword-board__item-highlight--down-30"></span>
+			<span id="down-11" class="crossword-board__item-highlight crossword-board__item-highlight--down-11"></span>
+			<span id="down-14" class="crossword-board__item-highlight crossword-board__item-highlight--down-14"></span>
 		</div>
 
 		<div class="crossword-board crossword-board--labels">
@@ -274,78 +248,33 @@
 			<span id="label-12" class="crossword-board__item-label crossword-board__item-label--12"><span class="crossword-board__item-label-text">12</span></span>
 			<span id="label-13" class="crossword-board__item-label crossword-board__item-label--13"><span class="crossword-board__item-label-text">13</span></span>
 			<span id="label-14" class="crossword-board__item-label crossword-board__item-label--14"><span class="crossword-board__item-label-text">14</span></span>
-			<span id="label-15" class="crossword-board__item-label crossword-board__item-label--15"><span class="crossword-board__item-label-text">15</span></span>
-			<span id="label-16" class="crossword-board__item-label crossword-board__item-label--16"><span class="crossword-board__item-label-text">16</span></span>
-			<span id="label-17" class="crossword-board__item-label crossword-board__item-label--17"><span class="crossword-board__item-label-text">17</span></span>
-			<span id="label-18" class="crossword-board__item-label crossword-board__item-label--18"><span class="crossword-board__item-label-text">18</span></span>
-			<span id="label-19" class="crossword-board__item-label crossword-board__item-label--19"><span class="crossword-board__item-label-text">19</span></span>
-			<span id="label-20" class="crossword-board__item-label crossword-board__item-label--20"><span class="crossword-board__item-label-text">20</span></span>
-			<span id="label-21" class="crossword-board__item-label crossword-board__item-label--21"><span class="crossword-board__item-label-text">21</span></span>
-			<span id="label-22" class="crossword-board__item-label crossword-board__item-label--22"><span class="crossword-board__item-label-text">22</span></span>
-			<span id="label-23" class="crossword-board__item-label crossword-board__item-label--23"><span class="crossword-board__item-label-text">23</span></span>
-			<span id="label-24" class="crossword-board__item-label crossword-board__item-label--24"><span class="crossword-board__item-label-text">24</span></span>
-			<span id="label-25" class="crossword-board__item-label crossword-board__item-label--25"><span class="crossword-board__item-label-text">25</span></span>
-			<span id="label-26" class="crossword-board__item-label crossword-board__item-label--26"><span class="crossword-board__item-label-text">26</span></span>
-			<span id="label-27" class="crossword-board__item-label crossword-board__item-label--27"><span class="crossword-board__item-label-text">27</span></span>
-			<span id="label-28" class="crossword-board__item-label crossword-board__item-label--28"><span class="crossword-board__item-label-text">28</span></span>
-			<span id="label-29" class="crossword-board__item-label crossword-board__item-label--29"><span class="crossword-board__item-label-text">29</span></span>
-			<span id="label-30" class="crossword-board__item-label crossword-board__item-label--30"><span class="crossword-board__item-label-text">30</span></span>
-			<span id="label-31" class="crossword-board__item-label crossword-board__item-label--31"><span class="crossword-board__item-label-text">31</span></span>
-			<span id="label-32" class="crossword-board__item-label crossword-board__item-label--32"><span class="crossword-board__item-label-text">32</span></span>
-			<span id="label-33" class="crossword-board__item-label crossword-board__item-label--33"><span class="crossword-board__item-label-text">33</span></span>
-
+			
 		</div>
 
 		<div class="crossword-clues">
 
 			<dl class="crossword-clues__list crossword-clues__list--across">
 				<dt class="crossword-clues__list-title">Across</dt>
-				<dd class="crossword-clues__list-item crossword-clues__list-item--across-1" data-number="1">Cover (6)</dd>
-				<dd class="crossword-clues__list-item crossword-clues__list-item--across-7" data-number="7">Water (5,3)</dd>
-				<dd class="crossword-clues__list-item crossword-clues__list-item--across-8" data-number="8">Indian Dress (4)</dd>
-				<dd class="crossword-clues__list-item crossword-clues__list-item--across-10" data-number="10">Without payment (6)</dd>
-				<dd class="crossword-clues__list-item crossword-clues__list-item--across-11" data-number="11">Parentless child (6)</dd>
-				<dd class="crossword-clues__list-item crossword-clues__list-item--across-14" data-number="14">Signal agreement (3)</dd>
-				<dd class="crossword-clues__list-item crossword-clues__list-item--across-16" data-number="16">Vigilant (5)</dd>
-				<dd class="crossword-clues__list-item crossword-clues__list-item--across-17" data-number="17">Row (4)</dd>
-				<dd class="crossword-clues__list-item crossword-clues__list-item--across-19" data-number="19">Wobbly dessert (5)</dd>
-				<dd class="crossword-clues__list-item crossword-clues__list-item--across-21" data-number="21">Unfashionable (5)</dd>
-				<dd class="crossword-clues__list-item crossword-clues__list-item--across-22" data-number="22">Nun's outfit (5)</dd>
-				<dd class="crossword-clues__list-item crossword-clues__list-item--across-23" data-number="23">Singlet (4)</dd>
-				<dd class="crossword-clues__list-item crossword-clues__list-item--across-26" data-number="26">As a joke (2,3)</dd>
-				<dd class="crossword-clues__list-item crossword-clues__list-item--across-28" data-number="28">Offer (3)</dd>
-				<dd class="crossword-clues__list-item crossword-clues__list-item--across-29" data-number="29">Choose (6)</dd>
-				<dd class="crossword-clues__list-item crossword-clues__list-item--across-30" data-number="30">Nullify (6)</dd>
-				<dd class="crossword-clues__list-item crossword-clues__list-item--across-31" data-number="31">Particle of matter (4)</dd>
-				<dd class="crossword-clues__list-item crossword-clues__list-item--across-32" data-number="32">Precision (8)</dd>
-				<dd class="crossword-clues__list-item crossword-clues__list-item--across-33" data-number="33">A sally (6)</dd>
+				<dd class="crossword-clues__list-item crossword-clues__list-item--across-2" data-number="2">Group of cells that carry out a specific function</dd>
+				<dd class="crossword-clues__list-item crossword-clues__list-item--across-4" data-number="4">A group of two or more</dd>
+				<dd class="crossword-clues__list-item crossword-clues__list-item--across-6" data-number="6">Structures that make up proteins</dd>
+				<dd class="crossword-clues__list-item crossword-clues__list-item--across-9" data-number="9">Things that can be seen with the eye</dd>
+				<dd class="crossword-clues__list-item crossword-clues__list-item--across-10" data-number="10">Specialized function unit within a cell</dd>
+				<dd class="crossword-clues__list-item crossword-clues__list-item--across-12" data-number="12">Group of organs that work together</dd>
+				<dd class="crossword-clues__list-item crossword-clues__list-item--across-13" data-number="13">Organ that releases digestive enzymes</dd>
 			</dl>
 
 			<dl class="crossword-clues__list crossword-clues__list--down">
 				<dt class="crossword-clues__list-title">Down</dt>
-				<dd class="crossword-clues__list-item crossword-clues__list-item--down-1" data-number="1">Slim (6)</dd>
-				<dd class="crossword-clues__list-item crossword-clues__list-item--down-2" data-number="2">Public speaker (6)</dd>
-				<dd class="crossword-clues__list-item crossword-clues__list-item--down-3" data-number="3">Podium (4)</dd>
-				<dd class="crossword-clues__list-item crossword-clues__list-item--down-4" data-number="4">Gemstone (7)</dd>
-				<dd class="crossword-clues__list-item crossword-clues__list-item--down-5" data-number="5">Turning tool (5)</dd>
-				<dd class="crossword-clues__list-item crossword-clues__list-item--down-6" data-number="6">Mock attack (5)</dd>
-				<dd class="crossword-clues__list-item crossword-clues__list-item--down-8" data-number="8">Sound of mind (4)</dd>
-				<dd class="crossword-clues__list-item crossword-clues__list-item--down-9" data-number="9">To free (3)</dd>
-				<dd class="crossword-clues__list-item crossword-clues__list-item--down-12" data-number="12">Fold (3)</dd>
-				<dd class="crossword-clues__list-item crossword-clues__list-item--down-13" data-number="13">Regions (5)</dd>
-				<dd class="crossword-clues__list-item crossword-clues__list-item--down-15" data-number="15">Stinking (5)</dd>
-				<dd class="crossword-clues__list-item crossword-clues__list-item--down-18" data-number="18">Senseless (5)</dd>
-				<dd class="crossword-clues__list-item crossword-clues__list-item--down-19" data-number="19">Quick short punch (3)</dd>
-				<dd class="crossword-clues__list-item crossword-clues__list-item--down-20" data-number="20">Permit (3)</dd>
-				<dd class="crossword-clues__list-item crossword-clues__list-item--down-21" data-number="21">Ballerinas (7)</dd>
-				<dd class="crossword-clues__list-item crossword-clues__list-item--down-22" data-number="22">Shade (3)</dd>
-				<dd class="crossword-clues__list-item crossword-clues__list-item--down-23" data-number="23">Vitality (6)</dd>
-				<dd class="crossword-clues__list-item crossword-clues__list-item--down-24" data-number="24">Dutch cheese (4)</dd>
-				<dd class="crossword-clues__list-item crossword-clues__list-item--down-25" data-number="25">Dozen (6)</dd>
-				<dd class="crossword-clues__list-item crossword-clues__list-item--down-26" data-number="26">Muslim religion (5)</dd>
-				<dd class="crossword-clues__list-item crossword-clues__list-item--down-27" data-number="27">Group of sheep (5)</dd>
-				<dd class="crossword-clues__list-item crossword-clues__list-item--down-28" data-number="28">Wager (3)</dd>
-				<dd class="crossword-clues__list-item crossword-clues__list-item--down-30" data-number="30">No votes (4)</dd>
+				<dd class="crossword-clues__list-item crossword-clues__list-item--down-1" data-number="1">Smallest structure unit of life</dd>
+				<dd class="crossword-clues__list-item crossword-clues__list-item--down-3" data-number="3">An animal or plant</dd>
+				<dd class="crossword-clues__list-item crossword-clues__list-item--down-4" data-number="4">Things that can only be detected with a microscope</dd>
+				<dd class="crossword-clues__list-item crossword-clues__list-item--down-5" data-number="5">System that breaks down food</dd>
+				<dd class="crossword-clues__list-item crossword-clues__list-item--down-7" data-number="7">Organelle that synthesizes protein</dd>
+				<dd class="crossword-clues__list-item crossword-clues__list-item--down-8" data-number="8">Organelle that contains digestivec enzymes</dd>
+				<dd class="crossword-clues__list-item crossword-clues__list-item--down-9" data-number="9">Tissue that helps with body movement</dd>
+				<dd class="crossword-clues__list-item crossword-clues__list-item--down-11" data-number="11">Multiple Tissues grouped together</dd>
+				<dd class="crossword-clues__list-item crossword-clues__list-item--down-14" data-number="14">Organelle that makes and packages proteins</dd>
 			</dl>
 
 		</div>
