--- a/index.html
+++ b/index.html
@@ -11,12 +11,12 @@
 		<span class="crossword-board__item--blank" id="item1-4"></span>
 		<span class="crossword-board__item--blank" id="item1-5"></span>
 		<span class="crossword-board__item--blank" id="item1-6"></span>
-		<span class="crossword-board__item--blank" id="item1-7"></span>
+		<input id="item1-7" class="crossword-board__item" type="text" minlength="1" maxlength="1" pattern="^[pP]{1}$" required="required" value="" />
 		<span class="crossword-board__item--blank" id="item1-8"></span>
-		<input id="item1-9" class="crossword-board__item" type="text" minlength="1" maxlength="1" pattern="^[cC]{1}$" required="required" value="" />
+		<span class="crossword-board__item--blank" id="item1-9"></span>
 		<span class="crossword-board__item--blank" id="item1-10"></span>
 		<span class="crossword-board__item--blank" id="item1-11"></span>
-		<span class="crossword-board__item--blank" id="item1-12"></span>
+		<input id="item1-12" class="crossword-board__item" type="text" minlength="1" maxlength="1" pattern="^[pP]{1}$" required="required" value="" />
 		<span class="crossword-board__item--blank" id="item1-13"></span>
 		<span class="crossword-board__item--blank" id="item1-14"></span>
 		<span class="crossword-board__item--blank" id="item1-15"></span>
