--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 		<span class="crossword-board__item--blank" id="item1-9"></span>
 		<span class="crossword-board__item--blank" id="item1-10"></span>
 		<span class="crossword-board__item--blank" id="item1-11"></span>
-		<input id="item1-12" class="crossword-board__item" type="text" minlength="1" maxlength="1" pattern="^[pP]{1}$" required="required" value="" />
+		<input id="item1-12" class="crossword-board__item" type="text" minlength="1" maxlength="1" pattern="^[LL]{1}$" required="required" value="" />
 		<span class="crossword-board__item--blank" id="item1-13"></span>
 		<span class="crossword-board__item--blank" id="item1-14"></span>
 		<span class="crossword-board__item--blank" id="item1-15"></span>
@@ -27,18 +27,17 @@
 
 		<!-- ROW 2 -->
 		<span class="crossword-board__item--blank" id="item2-1"></span>
-		<span class="crossword-board__item--blank" id="item2-2"></span>
-		<span class="crossword-board__item--blank" id="item2-3"></span>
-		<input id="item2-4" class="crossword-board__item" type="text" minlength="1" maxlength="1" pattern="^[tT]{1}$" required="required" value="" />
-		<input id="item2-5" class="crossword-board__item" type="text" minlength="1" maxlength="1" pattern="^[iI]{1}$" required="required" value="" />
-		<input id="item2-6" class="crossword-board__item" type="text" minlength="1" maxlength="1" pattern="^[sS]{1}$" required="required" value="" />
-		<input id="item2-7" class="crossword-board__item" type="text" minlength="1" maxlength="1" pattern="^[sS]{1}$" required="required" value="" />
-		<input id="item2-8" class="crossword-board__item" type="text" minlength="1" maxlength="1" pattern="^[uU]{1}$" required="required" value="" />
+		<input id="item2-2" class="crossword-board__item" type="text" minlength="1" maxlength="1" pattern="^[pP]{1}$" required="required" value="" />
+		<input id="item2-3" class="crossword-board__item" type="text" minlength="1" maxlength="1" pattern="^[rR]{1}$" required="required" value="" />
+		<input id="item2-4" class="crossword-board__item" type="text" minlength="1" maxlength="1" pattern="^[oO]{1}$" required="required" value="" />
+		<input id="item2-5" class="crossword-board__item" type="text" minlength="1" maxlength="1" pattern="^[tT]{1}$" required="required" value="" />
+		<input id="item2-6" class="crossword-board__item" type="text" minlength="1" maxlength="1" pattern="^[eE]{1}$" required="required" value="" />
+		<input id="item2-7" class="crossword-board__item" type="text" minlength="1" maxlength="1" pattern="^[aA]{1}$" required="required" value="" />
+		<input id="item2-8" class="crossword-board__item" type="text" minlength="1" maxlength="1" pattern="^[sS]{1}$" required="required" value="" />
 		<input id="item2-9" class="crossword-board__item" type="text" minlength="1" maxlength="1" pattern="^[eE]{1}$" required="required" value="" />
 		<span class="crossword-board__item--blank" id="item2-10"></span>
 		<span class="crossword-board__item--blank" id="item2-11"></span>
-		<span class="crossword-board__item--blank" id="item2-12"></span>
-		<span class="crossword-board__item--blank" id="item2-13"></span>
+		<input id="item2-12" class="crossword-board__item" type="text" minlength="1" maxlength="1" pattern="^[iI]{1}$" required="required" value="" />		<span class="crossword-board__item--blank" id="item2-13"></span>
 		<span class="crossword-board__item--blank" id="item2-14"></span>
 		<span class="crossword-board__item--blank" id="item2-15"></span>
 		<span class="crossword-board__item--blank" id="item2-16"></span>
@@ -47,18 +46,18 @@
 		<!-- ROW 2 -->
 
 		<!-- ROW 3 -->
-		<input id="item3-1" class="crossword-board__item" type="text" minlength="1" maxlength="1" pattern="^[oO]{1}$" required="required" value="" />
-		<span class="crossword-board__item--blank" id="item3-2"></span>
+		<span class="crossword-board__item--blank" id="item3-1"></span>
+		<input id="item3-2" class="crossword-board__item" type="text" minlength="1" maxlength="1" pattern="^[rR]{1}$" required="required" value="" />
 		<span class="crossword-board__item--blank" id="item3-3"></span>
 		<span class="crossword-board__item--blank" id="item3-4"></span>
-		<span class="crossword-board__item--blank" id="item3-5"></span>
+		<span class="crossword-board__item--blank" id="item3-5"></span>		
 		<span class="crossword-board__item--blank" id="item3-6"></span>
-		<span class="crossword-board__item--blank" id="item3-7"></span>
+		<input id="item3-7" class="crossword-board__item" type="text" minlength="1" maxlength="1" pattern="^[nN]{1}$" required="required" value="" />		<span class="crossword-board__item--blank" id="item3-8"></span>
 		<span class="crossword-board__item--blank" id="item3-8"></span>
-		<input id="item3-9" class="crossword-board__item" type="text" minlength="1" maxlength="1" pattern="^[lL]{1}$" required="required" value="" />
+		<span class="crossword-board__item--blank" id="item3-9"></span>
 		<span class="crossword-board__item--blank" id="item3-10"></span>
 		<span class="crossword-board__item--blank" id="item3-11"></span>
-		<span class="crossword-board__item--blank" id="item3-12"></span>
+		<input id="item3-12" class="crossword-board__item" type="text" minlength="1" maxlength="1" pattern="^[pP]{1}$" required="required" value="" />
 		<span class="crossword-board__item--blank" id="item3-13"></span>
 		<span class="crossword-board__item--blank" id="item3-14"></span>
 		<span class="crossword-board__item--blank" id="item3-15"></span>
@@ -68,20 +67,20 @@
 		<!-- ROW 3 -->
 
 		<!-- ROW 4 -->
-		<input id="item4-1" class="crossword-board__item" type="text" minlength="1" maxlength="1" pattern="^[rR]{1}$" required="required" value="" />
-		<span class="crossword-board__item--blank" id="item4-2"></span>
+		<span class="crossword-board__item--blank" id="item4-1"></span>
+		<input id="item4-2" class="crossword-board__item" type="text" minlength="1" maxlength="1" pattern="^[oO]{1}$" required="required" value="" />
 		<span class="crossword-board__item--blank" id="item4-3"></span>
 		<span class="crossword-board__item--blank" id="item4-4"></span>
-		<span class="crossword-board__item--blank" id="item4-5"></span>
+		<input id="item4-5" class="crossword-board__item" type="text" minlength="1" maxlength="1" pattern="^[aA]{1}$" required="required" value="" />
 		<span class="crossword-board__item--blank" id="item4-6"></span>
-		<input id="item4-7" class="crossword-board__item" type="text" minlength="1" maxlength="1" pattern="^[mM]{1}$" required="required" value="" />
-		<input id="item4-8" class="crossword-board__item" type="text" minlength="1" maxlength="1" pattern="^[oO]{1}$" required="required" value="" />
-		<input id="item4-9" class="crossword-board__item" type="text" minlength="1" maxlength="1" pattern="^[lL]{1}$" required="required" value="" />
-		<input id="item4-10" class="crossword-board__item" type="text" minlength="1" maxlength="1" pattern="^[eE]{1}$" required="required" value="" />
-		<input id="item4-11" class="crossword-board__item" type="text" minlength="1" maxlength="1" pattern="^[cC]{1}$" required="required" value="" />
-		<input id="item4-12" class="crossword-board__item" type="text" minlength="1" maxlength="1" pattern="^[uU]{1}$" required="required" value="" />
-		<input id="item4-13" class="crossword-board__item" type="text" minlength="1" maxlength="1" pattern="^[lL]{1}$" required="required" value="" />
-		<input id="item4-14" class="crossword-board__item" type="text" minlength="1" maxlength="1" pattern="^[eE]{1}$" required="required" value="" />
+		<input id="item4-7" class="crossword-board__item" type="text" minlength="1" maxlength="1" pattern="^[cC]{1}$" required="required" value="" />
+		<span class="crossword-board__item--blank" id="item4-8"></span>
+		<span class="crossword-board__item--blank" id="item4-9"></span>
+		<span class="crossword-board__item--blank" id="item4-10"></span>
+		<span class="crossword-board__item--blank" id="item4-11"></span>
+		<input id="item4-12" class="crossword-board__item" type="text" minlength="1" maxlength="1" pattern="^[aA]{1}$" required="required" value="" />
+		<span class="crossword-board__item--blank" id="item4-13"></span>
+		<span class="crossword-board__item--blank" id="item4-14"></span>
 		<span class="crossword-board__item--blank" id="item4-15"></span>
 		<span class="crossword-board__item--blank" id="item4-16"></span>
 		<span class="crossword-board__item--blank" id="item4-17"></span>
@@ -89,18 +88,18 @@
 		<!-- ROW 4 -->
 
 		<!-- ROW 5 -->
-		<input id="item5-1" class="crossword-board__item" type="text" minlength="1" maxlength="1" pattern="^[gG]{1}$" required="required" value="" />
-		<span class="crossword-board__item--blank" id="item5-2"></span>
-		<input id="item5-3" class="crossword-board__item" type="text" minlength="1" maxlength="1" pattern="^[dD]{1}$" required="required" value="" />
+		<span class="crossword-board__item--blank" id="item5-1"></span>
+		<input id="item5-2" class="crossword-board__item" type="text" minlength="1" maxlength="1" pattern="^[tT]{1}$" required="required" value="" />
+		<span class="crossword-board__item--blank" id="item5-3"></span>
 		<span class="crossword-board__item--blank" id="item5-4"></span>
-		<span class="crossword-board__item--blank" id="item5-5"></span>
+		<input id="item5-5" class="crossword-board__item" type="text" minlength="1" maxlength="1" pattern="^[mM]{1}$" required="required" value="" />
 		<span class="crossword-board__item--blank" id="item5-6"></span>
-		<input id="item5-7" class="crossword-board__item" type="text" minlength="1" maxlength="1" pattern="^[iI]{1}$" required="required" value="" />
+		<input id="item5-7" class="crossword-board__item" type="text" minlength="1" maxlength="1" pattern="^[rR]{1}$" required="required" value="" />
 		<span class="crossword-board__item--blank" id="item5-8"></span>
 		<span class="crossword-board__item--blank" id="item5-9"></span>
 		<span class="crossword-board__item--blank" id="item5-10"></span>
 		<span class="crossword-board__item--blank" id="item5-11"></span>
-		<span class="crossword-board__item--blank" id="item5-12"></span>
+		<input id="item5-12" class="crossword-board__item" type="text" minlength="1" maxlength="1" pattern="^[sS]{1}$" required="required" value="" />
 		<span class="crossword-board__item--blank" id="item5-13"></span>
 		<span class="crossword-board__item--blank" id="item5-14"></span>
 		<span class="crossword-board__item--blank" id="item5-15"></span>
@@ -108,7 +107,7 @@
 		<span class="crossword-board__item--blank" id="item5-17"></span>
 		<span class="crossword-board__item--blank" id="item5-18"></span>
 		<!-- ROW 5 -->
-
+<!--saved5:07-->
 		<!-- ROW 6 -->
 		<input id="item6-1" class="crossword-board__item" type="text" minlength="1" maxlength="1" pattern="^[aA]{1}$" required="required" value="" />
 		<input id="item6-2" class="crossword-board__item" type="text" minlength="1" maxlength="1" pattern="^[mM]{1}$" required="required" value="" />
