--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
 
 		<!-- ROW 4 -->
 		<span class="crossword-board__item--blank" id="item4-1"></span>
-		<input id="item4-2" class="crossword-board__item" type="text" minlength="1" maxlength="1" pattern="^[oO]{1}$" required="required" value="" />
+		<input id="item4-2" class="crossword-board__item" type="text" minlength="1" maxlength="1" pattern="^[oO]{1}$" required="required" value="" />	
 		<span class="crossword-board__item--blank" id="item4-3"></span>
 		<span class="crossword-board__item--blank" id="item4-4"></span>
 		<input id="item4-5" class="crossword-board__item" type="text" minlength="1" maxlength="1" pattern="^[aA]{1}$" required="required" value="" />
@@ -106,6 +106,7 @@
 		<span class="crossword-board__item--blank" id="item5-16"></span>
 		<span class="crossword-board__item--blank" id="item5-17"></span>
 		<span class="crossword-board__item--blank" id="item5-18"></span>
+
 		<!-- ROW 5 -->
 <!--saved5:07-->
 		<!-- ROW 6 -->
@@ -128,7 +129,7 @@
 		<span class="crossword-board__item--blank" id="item6-17"></span>
 		<span class="crossword-board__item--blank" id="item6-18"></span>
 		<!-- ROW 6 -->
-
+<!--EDITED12:29-->
 		<!-- ROW 7 -->
 		<span class="crossword-board__item--blank" id="item7-1"></span>
 		<input id="item7-2" class="crossword-board__item" type="text" minlength="1" maxlength="1" pattern="^[iI]{1}$" required="required" value="" />
