--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 		<input id="item2-9" class="crossword-board__item" type="text" minlength="1" maxlength="1" pattern="^[eE]{1}$" required="required" value="" />
 		<span class="crossword-board__item--blank" id="item2-10"></span>
 		<span class="crossword-board__item--blank" id="item2-11"></span>
-		<input id="item2-12" class="crossword-board__item" type="text" minlength="1" maxlength="1" pattern="^[iI]{1}$" required="required" value="" />		<span class="crossword-board__item--blank" id="item2-13"></span>
+		<input id="item2-12" class="crossword-board__item" type="text" minlength="1" maxlength="1" pattern="^[iI]{1}$" required="required" value="" /> <span class="crossword-board__item--blank" id="item2-13"></span>
 		<span class="crossword-board__item--blank" id="item2-14"></span>
 		<span class="crossword-board__item--blank" id="item2-15"></span>
 		<span class="crossword-board__item--blank" id="item2-16"></span>
@@ -50,9 +50,9 @@
 		<input id="item3-2" class="crossword-board__item" type="text" minlength="1" maxlength="1" pattern="^[rR]{1}$" required="required" value="" />
 		<span class="crossword-board__item--blank" id="item3-3"></span>
 		<span class="crossword-board__item--blank" id="item3-4"></span>
-		<span class="crossword-board__item--blank" id="item3-5"></span>		
+		<span class="crossword-board__item--blank" id="item3-5"></span>
 		<span class="crossword-board__item--blank" id="item3-6"></span>
-		<input id="item3-7" class="crossword-board__item" type="text" minlength="1" maxlength="1" pattern="^[nN]{1}$" required="required" value="" />		<span class="crossword-board__item--blank" id="item3-8"></span>
+		<input id="item3-7" class="crossword-board__item" type="text" minlength="1" maxlength="1" pattern="^[nN]{1}$" required="required" value="" />
 		<span class="crossword-board__item--blank" id="item3-8"></span>
 		<span class="crossword-board__item--blank" id="item3-9"></span>
 		<span class="crossword-board__item--blank" id="item3-10"></span>
@@ -68,7 +68,7 @@
 
 		<!-- ROW 4 -->
 		<span class="crossword-board__item--blank" id="item4-1"></span>
-		<input id="item4-2" class="crossword-board__item" type="text" minlength="1" maxlength="1" pattern="^[oO]{1}$" required="required" value="" />	
+		<input id="item4-2" class="crossword-board__item" type="text" minlength="1" maxlength="1" pattern="^[oO]{1}$" required="required" value="" />
 		<span class="crossword-board__item--blank" id="item4-3"></span>
 		<span class="crossword-board__item--blank" id="item4-4"></span>
 		<input id="item4-5" class="crossword-board__item" type="text" minlength="1" maxlength="1" pattern="^[aA]{1}$" required="required" value="" />
@@ -108,7 +108,7 @@
 		<span class="crossword-board__item--blank" id="item5-18"></span>
 
 		<!-- ROW 5 -->
-<!--saved5:07-->
+		<!--saved5:07-->
 		<!-- ROW 6 -->
 		<span class="crossword-board__item--blank" id="item6-1"></span>
 		<input id="item6-2" class="crossword-board__item" type="text" minlength="1" maxlength="1" pattern="^[eE]{1}$" required="required" value="" />
@@ -129,7 +129,7 @@
 		<span class="crossword-board__item--blank" id="item6-17"></span>
 		<span class="crossword-board__item--blank" id="item6-18"></span>
 		<!-- ROW 6 -->
-<!--EDITED12:29-->
+
 		<!-- ROW 7 -->
 		<span class="crossword-board__item--blank" id="item7-1"></span>
 		<input id="item7-2" class="crossword-board__item" type="text" minlength="1" maxlength="1" pattern="^[iI]{1}$" required="required" value="" />
@@ -276,7 +276,7 @@
 		<span class="crossword-board__item--blank" id="item13-17"></span>
 		<span class="crossword-board__item--blank" id="item13-18"></span>
 		<!-- ROW 13 -->
-		
+
 		<!-- ROW 14 -->
 		<span class="crossword-board__item--blank" id="item14-1"></span>
 		<span class="crossword-board__item--blank" id="item14-2"></span>
@@ -297,7 +297,7 @@
 		<span class="crossword-board__item--blank" id="item14-17"></span>
 		<span class="crossword-board__item--blank" id="item14-18"></span>
 		<!-- ROW 14 -->
-		
+
 		<!-- ROW 15 -->
 		<span class="crossword-board__item--blank" id="item15-1"></span>
 		<span class="crossword-board__item--blank" id="item15-2"></span>
@@ -318,7 +318,7 @@
 		<span class="crossword-board__item--blank" id="item15-17"></span>
 		<span class="crossword-board__item--blank" id="item15-18"></span>
 		<!-- ROW 15 -->
-		
+
 		<!-- ROW 16 -->
 		<span class="crossword-board__item--blank" id="item16-1"></span>
 		<span class="crossword-board__item--blank" id="item16-2"></span>
@@ -339,7 +339,7 @@
 		<span class="crossword-board__item--blank" id="item16-17"></span>
 		<span class="crossword-board__item--blank" id="item16-18"></span>
 		<!-- ROW 16 -->
-		
+
 		<!-- ROW 17 -->
 		<span class="crossword-board__item--blank" id="item17-1"></span>
 		<span class="crossword-board__item--blank" id="item17-2"></span>
@@ -360,7 +360,7 @@
 		<span class="crossword-board__item--blank" id="item17-17"></span>
 		<span class="crossword-board__item--blank" id="item17-18"></span>
 		<!-- ROW 17 -->
-		
+
 		<!-- ROW 18 -->
 		<span class="crossword-board__item--blank" id="item18-1"></span>
 		<span class="crossword-board__item--blank" id="item18-2"></span>
@@ -381,7 +381,7 @@
 		<span class="crossword-board__item--blank" id="item18-17"></span>
 		<span class="crossword-board__item--blank" id="item18-18"></span>
 		<!-- ROW 18 -->
-		
+
 		<div class="crossword-board crossword-board--highlight crossword-board--highlight--across">
 			<span id="across-3" class="crossword-board__item-highlight crossword-board__item-highlight--across-3"></span>
 			<span id="across-5" class="crossword-board__item-highlight crossword-board__item-highlight--across-5"></span>
@@ -410,7 +410,7 @@
 			<span id="label-8" class="crossword-board__item-label crossword-board__item-label--8"><span class="crossword-board__item-label-text">8</span></span>
 			<span id="label-9" class="crossword-board__item-label crossword-board__item-label--9"><span class="crossword-board__item-label-text">9</span></span>
 			<span id="label-10" class="crossword-board__item-label crossword-board__item-label--10"><span class="crossword-board__item-label-text">10</span></span>
-			
+
 		</div>
 
 		<div class="crossword-clues">
@@ -437,7 +437,7 @@
 		</div>
 
 		<div class="crossword-complete">
-		Congrats!
+			Congrats!
 		</div>
 
 	</div>
