--- a/index.html
+++ b/index.html
@@ -37,7 +37,8 @@
 		<input id="item2-9" class="crossword-board__item" type="text" minlength="1" maxlength="1" pattern="^[eE]{1}$" required="required" value="" />
 		<span class="crossword-board__item--blank" id="item2-10"></span>
 		<span class="crossword-board__item--blank" id="item2-11"></span>
-		<input id="item2-12" class="crossword-board__item" type="text" minlength="1" maxlength="1" pattern="^[iI]{1}$" required="required" value="" /> <span class="crossword-board__item--blank" id="item2-13"></span>
+		<input id="item2-12" class="crossword-board__item" type="text" minlength="1" maxlength="1" pattern="^[iI]{1}$" required="required" value="" /> 
+		<span class="crossword-board__item--blank" id="item2-13"></span>
 		<span class="crossword-board__item--blank" id="item2-14"></span>
 		<span class="crossword-board__item--blank" id="item2-15"></span>
 		<span class="crossword-board__item--blank" id="item2-16"></span>
